# modern_logger

./: CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile
google_test_config/: CMakeLists.txt  CMakeLists.txt.in
logger/: CMakeLists.txt  logger.hpp  logger.icpp  logger_file.cpp  logger_file.hpp
logger_demo/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  logger_corner_cases_tests.cpp  logger_data_types_tests.cpp  logger_levels_tests.cpp  logger_messages_tests.cpp  logger_tests.cpp
